examples/datalog/14_aggregations/19_agg_on_strings.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_agg_strings
Knowledge graph 'test_agg_strings' created.
Switched to knowledge graph: test_agg_strings
> .kg use test_agg_strings
Switched to knowledge graph: test_agg_strings
> +names[(1, "alice"), (1, "bob"), (2, "carol"), (2, "dave"), (2, "eve")].
Inserted 5 fact(s) into 'names'.
> string_count(G, <COUNT:N>) :- names(G, N).
Script error: Parse error: Unknown aggregate function: 
